light class, test build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(Ray_tracing)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 set(SOURCES
-    src/Color.cpp
     src/Camera.cpp
+    src/Color.cpp
     src/Geometry.cpp
     src/Globals.cpp
     src/Light.cpp
@@ -17,3 +17,21 @@ set(SOURCES
     src/Surface.cpp
 )
 add_executable(raytracer ${SOURCES})
+
+#--------------------------
+#Google tests
+#--------------------------
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG main  
+)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+file(GLOB TEST_SOURCES tests/*.cpp)
+add_executable(raytracer_tests ${TEST_SOURCES})
+target_link_libraries(raytracer_tests gtest_main pthread)
+add_test(NAME RayTracerTests COMMAND raytracer_tests)
