--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 3.10.0)
 project(Ray_tracing)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(${PROJECT_SOURCE_DIR}/include)
+
+#--------------------------
+#Set sources
+#--------------------------
+
 set(SOURCES
     src/Camera.cpp
     src/Color.cpp
@@ -16,7 +21,27 @@ set(SOURCES
     src/Scene.cpp
     src/Surface.cpp
 )
+#Main executable
 add_executable(raytracer ${SOURCES})
+
+
+# --------------------------
+# Build library from sources for tests
+# --------------------------
+
+add_library(raytracer_lib
+    src/Camera.cpp
+    src/Color.cpp
+    src/Geometry.cpp
+    src/Globals.cpp
+    src/Light.cpp
+    src/Objects.cpp
+    src/Ray.cpp
+    src/Renderer.cpp
+    src/Resolution.cpp
+    src/Scene.cpp
+    src/Surface.cpp
+)
 
 #--------------------------
 #Google tests
@@ -33,5 +58,6 @@ FetchContent_MakeAvailable(googletest)
 enable_testing()
 file(GLOB TEST_SOURCES tests/*.cpp)
 add_executable(raytracer_tests ${TEST_SOURCES})
-target_link_libraries(raytracer_tests gtest_main pthread)
+
+target_link_libraries(raytracer_tests gtest_main pthread raytracer_lib)
 add_test(NAME RayTracerTests COMMAND raytracer_tests)
