circular dependency fix, Intersection_data getter fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10.0)
 project(Ray_tracing)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(${PROJECT_SOURCE_DIR}/include)
-
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 #--------------------------
 #Set sources
 #--------------------------
